[package]
name = "crabml-vulkan"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "crabml vulkan support"

[dependencies]
int-enum = "0.5.0"
half = { version = "2.3.1" }
env_logger = "0.10"
pollster = "0.2.4"
bytemuck = { version = "1.14.0", features = ["derive"] }
vulkano =  { git = 'https://github.com/vulkano-rs/vulkano', branch = 'master' }
vulkano-shaders = { git = 'https://github.com/vulkano-rs/vulkano', branch = 'master' }
crabml = { workspace = true }
smallvec = "1.13.2"

[dev-dependencies]
pretty_assertions = "1.2.1"
bencher = "0.1.5"
approx = "0.5.1"